[tool.poetry]
name = "coding-problems"
version = "0.1.0"
description = "A collection of coding problems with solution in python"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
